--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.console.layout.ConversionPattern = [%p]  <%d> %m  %l -%n
 
 log4j.appender.com.jd.bdp.whale=info,whale
 log4j.appender.whale=org.apache.log4j.RollingFileAppender
-log4j.appender.whale.file=client_test.log
+log4j.appender.whale.file=niotest.log
 log4j.appender.whale.layout=org.apache.log4j.PatternLayout
 log4j.appender.whale.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}  %p %c{1}.%M(%L) | %m%n
 log4j.appender.whale.MaxFileSize=30MB
