--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,15 +1,15 @@
-log4j.rootLogger=info,console,whale
+log4j.rootLogger=debug
 
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = [%p]  <%d> %m  %l -%n
 
-log4j.appender.com.jd.bdp.whale=info,whale
-log4j.appender.whale=org.apache.log4j.RollingFileAppender
-log4j.appender.whale.file=niotest.log
-log4j.appender.whale.layout=org.apache.log4j.PatternLayout
-log4j.appender.whale.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}  %p %c{1}.%M(%L) | %m%n
-log4j.appender.whale.MaxFileSize=30MB
-log4j.appender.whale.MaxBackupIndex=10
+
+log4j.appender=org.apache.log4j.RollingFileAppender
+log4j.appender.file=niotest.log
+log4j.appender.layout=org.apache.log4j.PatternLayout
+log4j.appender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}  %p %c{1}.%M(%L) | %m%n
+log4j.appender.MaxFileSize=30MB
+log4j.appender.MaxBackupIndex=10
 
 
